# token_2022_AMM

./: .gitignore  Anchor.toml  README.md  counter_hook_new_keypair.json  kinobi.ts  package.json  token_2022_amm_keypair.json
app/: .env.local  PERFORMANCE_TIPS.md  RATE_LIMITING_SOLUTION.md  README.md  keypair.json  next.config.js  package-lock.json  package.json  tsconfig.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/clients/amm/accounts/: amm.ts  index.ts  pool.ts
app/app/clients/amm/errors/: amm.ts  index.ts
app/app/clients/amm/instructions/: createAmm.ts  createPool.ts  createPoolTokenAccounts.ts  depositLiquidity.ts  index.ts  swap.ts  updateAdmin.ts  updateFee.ts
app/app/clients/amm/programs/: amm.ts
app/app/clients/token_setup/errors/: tokenSetup.ts
app/app/clients/token_setup/instructions/: createTokenWithHook.ts  index.ts  initializeExtraAccountMetaList.ts  mintTokens.ts
app/app/clients/token_setup/programs/: index.ts  tokenSetup.ts
app/app/components/: AMMFisherman.tsx  BalanceDisplay.tsx  LiquidityForm.tsx  MintTradeCounter.tsx  PoolCreationForm.tsx  PoolDataDisplay.tsx  TokenCreationForm.tsx  TokenInput.tsx  TokenMinting.tsx  TokenSetup.tsx  TradingInterface.tsx  TransactionResult.tsx  WalletConnectButton.tsx  WalletProvider.md  WalletProvider.tsx
app/app/components/fishing/: Actors.tsx  BucketsOverlayController.tsx  ConsoleOverlay.tsx  FishingWorkflow.tsx  GameScene.tsx  Orchestrator.tsx  Overlays.tsx  ammFisherman.tsx  stage.tsx  useSfx.ts
app/app/config/: constants.ts  program.ts  rpc-config.ts
app/app/types/: README.md  amm.json  amm.ts  counter_hook.json  counter_hook.ts  index.ts  token_2022_amm.json  token_2022_amm.ts  token_setup.json  token_setup.ts
app/app/utils/: amm-client-new.ts  amm-client.ts  amm-helpers.ts  anchor-client.ts  balance-utils.ts  confirm.ts  counter-hook-client.ts  dev-wallet-adapter.ts  devnet-utils.ts  kit.ts  program-types.ts  test-account-derivation.ts  token-balance.ts  token-minting.ts  token-setup-client.ts  token-setup.ts  transaction-retry.ts  transaction-utils.ts  wallet-client-new.ts  wallet-client.ts
app/app/widgets/: AMMFishermanWidget.tsx
app/src/widgets/: AMMFishermanWidget.tsx
programs/amm/: Cargo.toml
programs/amm/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/amm/src/contexts/: create_amm.rs  create_pool.rs  create_token_accounts.rs  deposit_liquidity.rs  mod.rs  swap_exact_tokens_for_tokens.rs  utils.rs
programs/counter_hook/: Cargo.toml
programs/counter_hook/src/: errors.rs  lib.rs  state.rs
programs/counter_hook/src/contexts/: initialize_mint_trade_counter.rs  mod.rs  update_mint_trade_counter.rs
programs/token_2022_amm/: Cargo.toml
programs/token_2022_amm/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/token_2022_amm/src/contexts/: create_amm.rs  create_pool.rs  create_token_accounts.rs  create_token_with_hook.rs  deposit_liquidity.rs  mod.rs  swap_exact_tokens_for_tokens.rs  transfer_hook.rs  utils.rs
programs/token_setup/: Cargo.toml
programs/token_setup/src/: errors.rs  lib.rs  state.rs
programs/token_setup/src/contexts/: create_token_with_hook.rs  initialize_extra_account_meta_list.rs  mint_tokens.rs  mod.rs
scripts/: generate-kit-clients.mjs
tests/: token-2022-integration.ts  utils.ts
