[package]
name = "amm"
version = "0.1.0"
description = "AMM trading program for Token-2022 with hooks"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
spl-tlv-account-resolution = "0.10.0"
counter_hook = { path = "../counter_hook", features = ["cpi"] }
spl-transfer-hook-interface = "0.10.0"
spl-type-length-value = "0.8.0"
spl-pod = "0.6.0"
bytemuck = "1.23.1" 