[package]
name = "counter_hook"
version = "0.1.0"
description = "Counter hook program for tracking token transfers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter_hook"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "2.2.1"
spl-tlv-account-resolution = "0.9.0"
spl-transfer-hook-interface = "0.9.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0" 