[package]
name = "token_2022_amm"
version = "0.1.0"
description = "Token-2022 AMM with Transfer Hook Support"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_2022_amm"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-lang-idl = { version = "0.1.2", features = ["convert"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
spl-tlv-account-resolution = "0.9.0"
spl-transfer-hook-interface = "0.9.0"
spl-type-length-value = "0.7.0"
spl-pod = "0.5.1"
bytemuck = "1.14.0"