[package]
name = "token_setup"
version = "0.1.0"
description = "Token-2022 setup and minting program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_setup"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
spl-tlv-account-resolution = "0.9.0"
spl-transfer-hook-interface = "0.9.0"
spl-type-length-value = "0.7.0"
spl-pod = "0.5.1"
bytemuck = "1.14.0"
counter_hook = { path = "../counter_hook", features = ["cpi"] } 